--- a/style.css
+++ b/style.css
@@ -3,3 +3,51 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  display: inline-block;
+  padding: 0px 10px;
+  background-color: grey;
+  color: aquamarine;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: white;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+figcaption {
+  font-size: 0.75em;
+  text-align: center;
+}
+
+section#featured-property p {
+  width: 65%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#details div {
+  float: left;
+  background-color: coral;
+  color: aliceblue;
+  width: 25%;
+  text-align: center;
+}
+
